Add project section
Adding hovered animation and modal

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                        <div class="navbar-nav me-auto">
+                        <div class="navbar-nav ms-auto">
                             <a class="nav-link" href="#about">ABOUT</a>
                             <a class="nav-link" href="#work">WORK</a>
                             <a class="nav-link" href="#projects">PROJECTS</a>
@@ -68,7 +68,8 @@
                         developer
                         with
                         a passion for full-stack development.</p>
-                    <p>I also enjoy photograpy when I am not on my work. Check out at the Photo section!</p>
+                    <p>I also enjoy photograpy when I'm not on my work. Check out some of my works at the Photo section!
+                    </p>
                 </div>
                 <div class="proclamation" style="background-color: rgba(0, 0, 0, 0.1)">
                     <h3>SELF PROCLAMATION</h3>
@@ -106,19 +107,19 @@
                         <img src="images/edu/ucsd.jpg" alt="" class="d-block mx-auto school-img">
                         <h3>UC San Diego</h3>
                         <span>Mechanical Engineering</span>
-                        <p>Master of Science</p>
+                        <p class="text-muted">Master of Science</p>
                     </div>
                     <div class="col-lg-4 school-block">
                         <img src="images/edu/ntu.jpg" alt="" class="d-block mx-auto school-img">
                         <h3>National Taiwan University</h3>
                         <span>Mechanical Engineering</span>
-                        <p>Bachelor of Science</p>
+                        <p class="text-muted">Bachelor of Science</p>
                     </div>
                     <div class="col-lg-4 school-block">
                         <img src="images/edu/tokyoTech.jpg" alt="" class="d-block mx-auto school-img">
                         <h3>Tokyo Tech</h3>
                         <span>System&Control Engineering</span>
-                        <p>Exchange Student</p>
+                        <p class="text-muted">Exchange Student</p>
                     </div>
                 </div>
             </div>
@@ -205,37 +206,93 @@
                     <h3>PROJECTS</h3>
                 </div>
                 <div class="row">
-                    <div class="card bg-dark text-white col-lg-4 mx-auto">
-                        <img src="https://res.cloudinary.com/dx81jzgye/image/upload/v1652084352/JY-Site/Formula-Air/%E5%8E%BB%E8%83%8C_FormulaAir_xmwfcr.jpg"
-                            class="card-img img-thumbnail" alt="..." style="opacity: 0.5">
-                        <div class="card-img-overlay">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
-                            <p class="card-text">Last updated 3 mins ago</p>
+                    <div class="col-12 col-md-6 col-lg-4 mb-5">
+                        <div class="card project-container">
+                            <img src="images/formulaAir.JPG" class="card-img-top project-img">
+                            <div class="card-img-overlay img-filter"></div>
+                            <div class="card-img-overlay project-title" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
+                                <div>Formula Air</div>
+                            </div>
                         </div>
                     </div>
-                    <div class="card bg-dark text-white col-lg-4 mx-auto">
-                        <img src="https://res.cloudinary.com/dx81jzgye/image/upload/v1652084352/JY-Site/Formula-Air/%E5%8E%BB%E8%83%8C_FormulaAir_xmwfcr.jpg"
-                            class="card-img" alt="..." style="opacity: 0.5">
-                        <div class="card-img-overlay">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
-                            <p class="card-text">Last updated 3 mins ago</p>
+                    <div class="col-12 col-md-6 col-lg-4 mb-5">
+                        <div class="card project-container">
+                            <img src="images/asme.JPG" class="card-img-top project-img">
+                            <div class="card-img-overlay img-filter"></div>
+                            <div class="card-img-overlay project-title" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
+                                <div>ASME SPDC</div>
+                            </div>
                         </div>
                     </div>
-                    <div class="card bg-dark text-white col-lg-4 mx-auto">
-                        <img src="https://res.cloudinary.com/dx81jzgye/image/upload/v1652084352/JY-Site/Formula-Air/%E5%8E%BB%E8%83%8C_FormulaAir_xmwfcr.jpg"
-                            class="card-img" alt="..." style="opacity: 0.5">
-                        <div class="card-img-overlay">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
-                            <p class="card-text">Last updated 3 mins ago</p>
+                    <div class="col-12 col-md-6 col-lg-4 mb-5">
+                        <div class="card project-container">
+                            <img src="images/logitech.jpg" class="card-img-top project-img">
+                            <div class="card-img-overlay img-filter"></div>
+                            <div class="card-img-overlay project-title" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
+                                <div>Logitech Internship</div>
+                            </div>
                         </div>
                     </div>
+                    <div class="col-12 col-md-6 col-lg-4 mb-5">
+                        <div class="card project-container">
+                            <img src="images/personalWeb.jpg" class="card-img-top project-img">
+                            <div class="card-img-overlay img-filter"></div>
+                            <div class="card-img-overlay project-title" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
+                                <div>Personal Website</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 mb-5">
+                        <div class="card project-container">
+                            <img src="images/yelpCamp.jpg" class="card-img-top project-img">
+                            <div class="card-img-overlay img-filter"></div>
+                            <div class="card-img-overlay project-title" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
+                                <div>Yelp Camp</div>
+                                <!-- https://fathomless-fortress-13278.herokuapp.com/ -->
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 mb-5">
+                        <div class="card project-container">
+                            <img src="images/scoreKeeper.jpg" class="card-img-top project-img">
+                            <div class="card-img-overlay img-filter"></div>
+                            <div class="card-img-overlay project-title" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
+                                <div>Score Keeper</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
+                <!-- Button trigger modal -->
+                <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    Launch demo modal
+                </button> -->
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, autem? Quae porro
+                                perferendis veritatis aspernatur vitae esse culpa voluptatum, explicabo, quis, quos
+                                quidem laborum dolores veniam cupiditate consequuntur dolor repellendus!
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
